--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,19 +13,19 @@
     "noUnusedParameters": true,
     "strictNullChecks": true,
     "sourceMap": true,
-    "baseUrl": ".",
     "rootDir": ".",
     "jsx": "preserve",
     "jsxFactory": "Taro.createElement",
     "allowJs": true,
     "resolveJsonModule": true,
-    "typeRoots": [
-      "node_modules/@types"
-    ]
+    "checkJs": false,
+    "typeRoots": ["node_modules/@types", "global.d.ts"],
+    "baseUrl": ".",
+    "importHelpers": true,
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
-  "exclude": [
-    "node_modules",
-    "dist"
-  ],
+  "exclude": ["node_modules", "dist", "config"],
   "compileOnSave": false
 }
