--- a/project.config.json
+++ b/project.config.json
@@ -2,7 +2,7 @@
   "miniprogramRoot": "./dist",
   "projectname": "taro-template",
   "description": "",
-  "appid": "touristappid",
+  "appid": "wx29df2d5598f845b8",
   "setting": {
     "urlCheck": true,
     "es6": false,
