--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "exclude": ["node_modules", "dist", "config"],
+  "exclude": ["node_modules", "dist", "config", "src/components/vant-weapp"],
   "compileOnSave": false
 }
